crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_inferred_type.rs
use reinhardt_macros::settings;

#[settings(CacheSettings | my_cache: CacheSettings)]
pub struct BadSettings;

fn main() {}
