crates/reinhardt-core/macros/tests/ui/settings/fail/composition_duplicate_inferred_type.stderr
error: Duplicate fragment type `CacheSettings`.
 --> tests/ui/settings/fail/composition_duplicate_inferred_type.rs:3:1
  |
3 | #[settings(CacheSettings | my_cache: CacheSettings)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
